--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,77 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700);
+
+body,
+h1,
+h2,
+h3 {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+body {
+  font-size: 16px;
+}
+
+p {
+  line-height: 1.6;
+}
+
+h1 {
+  font-weight: 700;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+h3 {
+  font-style: italic;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.more-toolbar {
+  margin-top: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.more {
+  margin-top: 3px
 }
 
-.card {
-  padding: 2em;
+.more:last-child {
+  margin-bottom: 0px;
 }
 
-.read-the-docs {
-  color: #888;
+.more p {
+  font-weight: 350;
+}
+
+.p {
+  text-align: center;
+}
+
+table {
+  color: #fff !important;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #567cee;
+}
+
+table>* {
+  color: white !important;
+}
+
+th,
+td {
+  color: white !important;
+  font-weight: 600 !important;
+}
+
+.footer {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.footer h2 {
+  display: inline-block;
+  width: 50%;
+}
+
+li {
+  list-style: none;
 }
